# raspi-ic

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/App/: App.cpp  App.hpp
client/Log/: ILog.hpp  Log.cpp  Log.hpp
client/ServerDiscovery/: IServerDiscovery.hpp  ServerDiscovery.cpp  ServerDiscovery.hpp
server/: CMakeLists.txt
server/App/: App.cpp  App.hpp
